# Rpc

./: .gitignore
Cpp/: CMakeLists.txt  EasyRpc.txt  EasyRpcClientBase.h  EasyRpcFunction.h  EasyRpcSessionBase.h  Generator.cpp  ModernRpc.h  ModernRpcClientBase.h  ModernRpcFunction.h  ModernRpcSessionBase.h  Operations.h  ReadMe.txt  ReadMeRus.txt  RpcProtocol.txt  clientServerTest.cpp
Cpp/Client/: ClientInterfaces.h  ClientMain.cpp  RpcClient.cpp  RpcClient.h  SimpleClient.cpp  TcpClient.h  exampleEasyClient.cpp  exampleModernClient.cpp
Cpp/Protobuf/: AddressBook.proto  CreateHeaders.sh
Cpp/Server/: EasyRpcTcpServer.cpp  EasyRpcTcpServer.h  Interfaces.h  ModernRpcTcpServer.cpp  ModernRpcTcpServer.h  RpcModel.h  RpcServer.cpp  RpcServer.h  ServerMain.cpp  ServerSession.h  SimpleServer.cpp  TcpServer.cpp  TcpServer.h  exampleEasyServer.cpp  exampleModernServer.cpp
Rust/: Cargo.toml
Rust/Client/: simple_client.rs
Rust/Server/: simple_server.rs
